# django-financial

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  makefile  manage.py  project_structure.txt  pyproject.toml  pytest.ini
.github/workflows/: build.yml  checks.yml  deploy.yml
apps/accounts/: admin.py  models.py  serializers.py  services.py  tests.py  urls.py  views.py
apps/accounts/migrations/: 0001_initial.py  0002_initial.py
apps/accounts/tests/: test_models.py  test_services.py  test_views.py
apps/analysis/: admin.py  apps.py  models.py  serializers.py  service.py  services.py  signals.py  tests.py  urls.py  views.py
apps/analysis/management/commands/: uuid.py
apps/analysis/migrations/: 0001_initial.py  0002_alter_analysis_result_image.py  0002_initial.py
apps/core/management/commands/: wait_for_db.py
apps/notification/: admin.py  apps.py  models.py  serializers.py  signals.py  tests.py  urls.py  views.py
apps/notification/migrations/: 0001_initial.py  0002_alter_notification_message.py  0002_initial.py
apps/users/: admin.py  authentication.py  jwt.py  models.py  serializers.py  services.py  tests.py  tokens.py  urls.py  utils.py  views.py
apps/users/migrations/: 0001_initial.py  0002_customuser_delete_user.py
config/: urls.py
config/settings/: base.py  dev.py  prod.py
django_financial/: asgi.py  settings.py  urls.py  wsgi.py
notification/: admin.py  apps.py  models.py  views.py
notification/migrations/: 0001_initial.py
scripts/: run.sh
tests/: test_api.py  test_auth_flow.py
