[project]
name = "django-financial"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.5",
    "django-restframework>=0.0.1",
    "drf-spectacular>=0.28.0",
    "drf-yasg>=1.21.10",
    "gunicorn>=21.2",
    "uvicorn>=0.24.0"
]

[dependency-groups]
dev = [
    "ruff>=0.12.10",
]
